plugin/src/test/resources/annotator/perl/unreachableCode/callDie.code
<error descr="Unreachable code">foo</error> die "something";